[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/player.png" type="Texture" id=1]
[ext_resource path="res://player/player-1.gd" type="Script" id=2]
[ext_resource path="res://player/Shoot.gd" type="Script" id=3]
[ext_resource path="res://player/projectile.tscn" type="PackedScene" id=4]
[ext_resource path="res://GUI/HUD.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34.5425, 32.8819 )

[node name="player-1" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="."]
scale = Vector2( 0.737132, 0.737132 )
texture = ExtResource( 1 )

[node name="Shoot" type="Node2D" parent="."]
script = ExtResource( 3 )
projectile = ExtResource( 4 )

[node name="fire_point" type="Node2D" parent="Shoot"]
position = Vector2( 77.2985, 0 )

[node name="fire_rate" type="Timer" parent="Shoot"]
wait_time = 0.5
one_shot = true

[node name="CanvasLayer" parent="." instance=ExtResource( 5 )]

[connection signal="timeout" from="Shoot/fire_rate" to="Shoot" method="_on_fire_rate_timeout"]
